# RT2QMD

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CMake/: CheckGitDirtiness.cmake  ConfigCompilerFlags.cmake  FindCUDA.cmake  FindROOT.cmake  GenerateInfoHeader.cmake  Macros.cmake  ParseLine.cmake  WIX.template.in
RT2QMD/: CMakeLists.txt  aux_score.cpp  aux_score.cu  aux_score.cuh  aux_score.hpp  auxiliary.cpp  auxiliary.cu  auxiliary.cuh  auxiliary.hpp  mcrt2_rt2qmd_standalone.cpp
examples/1_ddx_c12c12_290MeVu/: ddx.py  ddx_c12c12.inp  ddx_c12c12_n15_0.txt  ddx_c12c12_n30_0.txt  ddx_c12c12_n45_0.txt  ddx_c12c12_n60_0.txt  ddx_c12c12_n75_0.txt  ddx_c12c12_n90_0.txt  ddx_c12c12_sample.out
examples/1_ddx_c12c12_290MeVu/exfor/: 15_1.txt  30_1.txt  45_1.txt  60_1.txt  75_1.txt  90_1.txt
examples/1_ddx_c12c12_290MeVu/g4_qmd/: ddx_n15.txt  ddx_n30.txt  ddx_n45.txt  ddx_n60.txt  ddx_n75.txt  ddx_n90.txt
examples/2_ddx_he4cu0_230MeVu/: ddx.py  ddx_he4cu63.inp  ddx_he4cu63_n10_0.txt  ddx_he4cu63_n20_0.txt  ddx_he4cu63_n30_0.txt  ddx_he4cu63_n40_0.txt  ddx_he4cu63_n5_0.txt  ddx_he4cu63_n60_0.txt  ddx_he4cu63_n80_0.txt  ddx_he4cu63_sample.out  ddx_he4cu65.inp  ddx_he4cu65_n10_0.txt  ddx_he4cu65_n20_0.txt  ddx_he4cu65_n30_0.txt  ddx_he4cu65_n40_0.txt  ddx_he4cu65_n5_0.txt  ddx_he4cu65_n60_0.txt  ddx_he4cu65_n80_0.txt  ddx_he4cu65_sample.out
examples/2_ddx_he4cu0_230MeVu/exfor/: 10_1.txt  20_1.txt  30_1.txt  40_1.txt  5_1.txt  60_1.txt  80_1.txt
examples/2_ddx_he4cu0_230MeVu/g4qmd/29063/: ddx_n10.txt  ddx_n20.txt  ddx_n30.txt  ddx_n40.txt  ddx_n5.txt  ddx_n60.txt  ddx_n80.txt  run_29063.out
examples/2_ddx_he4cu0_230MeVu/g4qmd/29065/: ddx_n10.txt  ddx_n20.txt  ddx_n30.txt  ddx_n40.txt  ddx_n5.txt  ddx_n60.txt  ddx_n80.txt  run.out
examples/3_yield_c12c12_290MeVu/: yield.py  yield_c12c12.inp  yield_c12c12_b10_0.txt  yield_c12c12_b11_0.txt  yield_c12c12_be10_0.txt  yield_c12c12_be7_0.txt  yield_c12c12_be9_0.txt  yield_c12c12_li6_0.txt  yield_c12c12_li7_0.txt  yield_c12c12_li8_0.txt  yield_c12c12_sample.out
examples/4_heterogeneity_events/: ddx.py  heterogeneous.inp  heterogeneous_a15_0.txt  heterogeneous_a30_0.txt  heterogeneous_a45_0.txt  heterogeneous_a60_0.txt  heterogeneous_sample.out
examples/5_qmd_dump/: ani.py  get_dump.inp  get_dump_sample.out
interface/: setup.py
interface/src/rt2qmd/: constant.py  cstruct.py  dump.py  fortran.py  hadron.py  particle.py  print.py  qmd.py  scoring.py  singleton.py
mcutil/: CMakeLists.txt
mcutil/device/: algorithm.cpp  algorithm.cuh  algorithm.hpp  assert.cuh  exception.h  memory.cpp  memory.cuh  memory.hpp  memory.tpp  memory_manager.cpp  memory_manager.hpp  prng.cpp  prng.cu  prng.hpp  shuffle.cuh  tuning.cpp  tuning.cuh  tuning.hpp
mcutil/fortran/: fortran.cpp  fortran.hpp  fortran.tpp
mcutil/mclog/: logger.cpp  logger.hpp  logger.tpp
mcutil/parser/: input.cpp  input.hpp  input.tpp  parser.cpp  parser.hpp  parser.tpp
mcutil/prompt/: env.cpp  env.hpp  prompt.cpp  prompt.hpp
mcutil/singleton/: singleton.cpp  singleton.hpp  singleton_api.h
module/: CMakeLists.txt
module/deexcitation/: auxiliary.cpp  auxiliary.cu  auxiliary.cuh  auxiliary.hpp  channel_evaporation.cu  channel_evaporation.cuh  channel_fission.cu  channel_fission.cuh  channel_photon.cu  channel_photon.cuh  channel_unstable_breakup.cu  channel_unstable_breakup.cuh  config.cpp  config.hpp  cross_section.cu  cross_section.cuh  deexcitation.cu  deexcitation.cuh  handler.cpp  handler.hpp  nuclear_level.cu  nuclear_level.cuh  utils.cu  utils.cuh
module/genericion/: auxiliary.cpp  auxiliary.hpp  projectile.cpp  projectile.hpp
module/hadron/: atomic.cpp  atomic.hpp  auxiliary.cpp  auxiliary.cuh  auxiliary.hpp  kinematics.cuh  nucleus.cpp  nucleus.cu  nucleus.cuh  nucleus.hpp  projectile.cpp  projectile.cuh  projectile.hpp  xs.cpp  xs.hpp  xs_dev.cu  xs_dev.cuh
module/material/: auxiliary.cpp  auxiliary.hpp
module/nuc_secondary/: secondary.cu  secondary.cuh
module/particles/: define.cpp  define.hpp  define.tpp  define_struct.hpp  projectile_interface.hpp
module/physics/: constants.cpp  constants.cuh  constants.hpp  physics.cpp  physics.hpp
module/qmd/: buffer.cpp  buffer.cu  buffer.cuh  buffer.hpp  collision.cu  collision.cuh  config.cpp  config.hpp  constants.cpp  constants.cu  constants.cuh  constants.hpp  mean_field.cu  mean_field.cuh  nucleus.cu  nucleus.cuh  reaction.cpp  reaction.cu  reaction.cuh  reaction.hpp  xs.cu  xs.cuh
module/scoring/: aux_score.cpp  aux_score.cu  aux_score.cuh  aux_score.hpp  ion_filter.cpp  ion_filter.hpp  tally.cpp  tally.cu  tally.cuh  tally.hpp  tally.tpp  tally_interface.cpp  tally_interface.cu  tally_interface.cuh  tally_interface.hpp  tally_struct.h
module/transport/: buffer.cpp  buffer.cu  buffer.cuh  buffer.hpp  buffer_struct.hpp  transport.cu  transport.cuh
resource/: CMakeLists.txt
resource/material/: NIST_abundance.txt
resource/syntax/: CUDA_SETTINGS  INCL_SETTINGS  ION_INELASTIC  YIELD
